--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 *{
     padding: 0;
     margin:0;
-    font-family: 'Mulish', sans-serif;
+
     scroll-behavior: smooth;
 
 
@@ -12,7 +12,7 @@ body {
 
 nav ul li a {
     text-decoration: none;
-
+    font-family: 'Mulish', sans-serif;
     padding:16px;
     border-radius: 5px;
     color: #e1e3e3;
@@ -59,6 +59,7 @@ nav ul {
 
 .text-logo {
     color:#e1e3e3;
+    font-family: 'Mulish', sans-serif;
 }
 .a-text{
     color:#314254;
@@ -78,7 +79,7 @@ nav { background-color: #6096B4; width: 100%; height: 75px;}
 .testi-text{
     text-align: center;
     margin-top: 30px;
-    margin-bottom: 100px;
+    margin-bottom: 70px;
     font-family: 'Tilt Warp', cursive;
 
     font-weight: bold;
@@ -123,12 +124,12 @@ nav { background-color: #6096B4; width: 100%; height: 75px;}
 
 }
 
-.high-rated .row-place{
+.high-rated .row-place, .high-rated .row-place-second{
     display: flex;
 
 }
 
-.row-place .column{
+.row-place .column , .row-place-second .column{
     flex: 50%;
 }
 
@@ -197,25 +198,20 @@ nav { background-color: #6096B4; width: 100%; height: 75px;}
     display: flex;
     justify-content: center;
 
-
-
-
 }
 
 .column-hero-first { width: 400px; height: 300px; border-radius: 20px;
     transition: 0.3s ease-in-out;
     overflow: hidden;}
 
-.column-hero-first:hover{
-    transform: scale(1.1);
-
-
+.star{
+    cursor: pointer;
 }
 
-.high-rated .row-place .left-column  {
+
+.high-rated .row-place .left-column ,.high-rated .row-place-second .left-column  {
 
     margin-left: 14px;
-
     font-size: 40px;
 }
 
@@ -223,6 +219,7 @@ nav { background-color: #6096B4; width: 100%; height: 75px;}
     font-weight: bold;
     font-size: 15px;
     margin-top: 10px;
+    font-family: Mulish,sans-serif;
 }
 
 
@@ -234,17 +231,6 @@ nav { background-color: #6096B4; width: 100%; height: 75px;}
 .row-place .column{
     flex: 50%;
 }
-
-.row-place .column img{
-    margin-left: 20px;
-}
-
-
-
-
-
-
-
 
 .text-content{
     color: #383838;
@@ -287,14 +273,24 @@ nav { background-color: #6096B4; width: 100%; height: 75px;}
 
 }
 
+.indonesia{
+    background-color: black;
+}
+
 .indo, .nesia{
     cursor: pointer;
 }
 
 .indo {
+    padding-left: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     color: red;
 }
 .nesia{
+    padding-top:5px;
+    padding-right: 5px;
+    padding-bottom: 5px;
     color: white;
 }
 
@@ -306,6 +302,31 @@ nav { background-color: #6096B4; width: 100%; height: 75px;}
 
 }
 
+/* Contact n Profile */
+
+.wrapper-contact-profile{
+    display: flex;
+
+
+    margin: auto;
+
+}
+
+.wrapper-contact-profile .row{
+    flex: 50%;
+}
+
+.wrapper-contact-profile .box-contact{
+
+
+    background-color: aqua;
+}
+
+.wrapper-contact-profile h1{ font-size: 50px; text-align: center}
+
+
+/*End of Contact n Profile*/
+
 
 @media screen and (max-width: 852px) {
 
@@ -313,14 +334,24 @@ nav { background-color: #6096B4; width: 100%; height: 75px;}
         display: block;
     }
 
-    .row-place{
+    .row-place, .row-place-second{
         display: flex;
-        flex-direction: column-reverse;
+
     }
 
-    .column{
+    .row-place{
+        flex-direction: column-reverse;
+    }
+    .row-place-second {
+        flex-direction: column;
+    }
 
+    .row-place-second .column , .row-place .column {
+        margin: auto;
+    }
 
+    .header-place-first{
+        text-align: center;
     }
 
     ul{
@@ -352,7 +383,7 @@ nav { background-color: #6096B4; width: 100%; height: 75px;}
     }
 
 
-
+    .wrapper-contact-profile { display: block}
 
 
     .second-row{
@@ -378,5 +409,10 @@ nav { background-color: #6096B4; width: 100%; height: 75px;}
 
     .head-text{
         margin-top:130px;
+    }
+    .column-hero-first:hover{
+        transform: scale(1.1);
+
+
     }
 }
